--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <li><a href="puja/venkateswara-puja.html">Venkateswara Puja</a></li>
                     <li><a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a></li>
                     <li><a href="stotram/garuda-gamana-stotram.html">Garuda Gamana Stotram</a></li>
+                    <li><a href="stotram/vishnu-sahasranamam.html">Vishnu Sahasranamam</a></li>
                 </ol>
             </div>
 
