--- a/puja/TEMPLATE-PUJA.html
+++ b/puja/TEMPLATE-PUJA.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>TEMPLATE_TITLE_LANG (TEMPLATE_TITLE_ENG)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
