--- a/puja/hanumaan-puja.html
+++ b/puja/hanumaan-puja.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಹನುಮಾನ್ ಪೂಜೆ (Hanumaan Pooja)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
