--- a/puja/lakshmi-puja.html
+++ b/puja/lakshmi-puja.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಲಕ್ಷ್ಮಿ ಪೂಜೆ (Lakshmi Puja)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
