--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಶಿವ ಅಭಿಷೇಕಂ (Shiva Abhishekam)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
