--- a/puja/veerabhadra-puja.html
+++ b/puja/veerabhadra-puja.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ವೀರಭದ್ರಸ್ವಾಮಿ ಪೂಜ (Veerabhadraswamy Puja)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
