--- a/puja/venkateswara-puja.html
+++ b/puja/venkateswara-puja.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ವೆಂಕಟೇಶ್ವರ ಪೂಜ (Venkateswara Pooja)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
