--- a/puja/vyuha-lakshmi-tantra.html
+++ b/puja/vyuha-lakshmi-tantra.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ವ್ಯೂಹಲಕ್ಷ್ಮೀ ತಂತ್ರಃ (Vyuha Lakshmi Tantram)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
