--- a/stotram/argala-stotram.html
+++ b/stotram/argala-stotram.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಅರ್ಗಲಾ ಸ್ತೋತ್ರಂ (Argala Stotram)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
