--- a/stotram/daily-mantras.html
+++ b/stotram/daily-mantras.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ನಿತ್ಯ ಮಂತ್ರ (Daily Mantra)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
