--- a/stotram/dattratreya-mantra.html
+++ b/stotram/dattratreya-mantra.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ದತ್ತಾತ್ರೇಯ ಚಿತ್ತ ಸ್ಥಿರ ಮಂತ್ರ (Dattātrēya citta sthira mantra)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
