--- a/stotram/ganpati-sankata-nashana-stotram.html
+++ b/stotram/ganpati-sankata-nashana-stotram.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಸಂಕಟ ನಾಶನ ಸ್ತೋತ್ರಂ (Sankata Nashana Stotram)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
