--- a/stotram/kanakadhara-stotram.html
+++ b/stotram/kanakadhara-stotram.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಕನಕಧಾರ ಸ್ತೋತ್ರಂ (Kanakadhara Stotram)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
