--- a/stotram/lakshmi-ashtakam.html
+++ b/stotram/lakshmi-ashtakam.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಮಹಾಲಕ್ಷ್ಮಿ ಅಷ್ಟಕಂ (Mahalakshmi Ashtakam)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
