--- a/stotram/lakshmi-ashtottara-satanaama-stotram.html
+++ b/stotram/lakshmi-ashtottara-satanaama-stotram.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಲಕ್ಷ್ಮಿ ಅಷ್ಟೋತ್ತರ ಶತನಾಮ ಸ್ತೋತ್ರಂ (Lakshmi Ashtottara Satanaama Stotram)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
