--- a/stotram/lakshmi-chaturvimsati-naamavali.html
+++ b/stotram/lakshmi-chaturvimsati-naamavali.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಮಹಾಲಕ್ಷ್ಮೀ ಚತುರ್ವಿಂಶತಿನಾಮ ನಾಮಾವಲಿ (Mahalakshmi Chaturvimsati Namaavali)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
