--- a/stotram/lakshmi-chaturvimsati-stotram.html
+++ b/stotram/lakshmi-chaturvimsati-stotram.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಶ್ರೀ ಮಹಾಲಕ್ಷ್ಮೀ ಚತುರ್ವಿಂಶತಿನಾಮ ಸ್ತೋತ್ರಂ (Shri Mahalakshmi Chaturvimsati Stotram)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
