--- a/stotram/maha-mrityunjaya-mantra.html
+++ b/stotram/maha-mrityunjaya-mantra.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಮಹಾಮೃತ್ಯುಂಜಯ ಮಂತ್ರಂ (Maha Mrityunjaya Mantra)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
