--- a/stotram/pitru-devata-stotram.html
+++ b/stotram/pitru-devata-stotram.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಪಿತೃ ದೇವತಾ ಸ್ತೋತ್ರಂ (Pitru Devata Stotram)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
