--- a/stotram/shiva-panchakshara-stotram.html
+++ b/stotram/shiva-panchakshara-stotram.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಶಿವ ಪಂಚಾಕ್ಷರ ಸ್ತೋತ್ರಂ (Shiva Panchakshara Stotram)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
