--- a/stotram/soundarya-lahari.html
+++ b/stotram/soundarya-lahari.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಸೌಂದರ್ಯ ಲಹರಿ (Soundarya Lahari)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
