--- a/stotram/surya-namaskara-mantra.html
+++ b/stotram/surya-namaskara-mantra.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಸೂರ್ಯ ನಮಸ್ಕಾರ ಮಂತ್ರಂ (Surya Namaskara Mantra)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
