--- a/stotram/venkateswara-vajra-kavacham.html
+++ b/stotram/venkateswara-vajra-kavacham.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ವೆಂಕಟೇಶ್ವರ ವಜ್ರ ಕವಚ (Venkateswara vajra kavacham)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
