--- a/puja/ganapati-puja.html
+++ b/puja/ganapati-puja.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಗಣಪತಿ ಪೂಜ (Ganapati Pooja)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
