--- a/puja/lakshmi-chaturvimsati.html
+++ b/puja/lakshmi-chaturvimsati.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಮಹಾಲಕ್ಷ್ಮೀ ಚತುರ್ವಿಂಶತಿ (Mahalakshmi Chaturvimsati)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
