--- a/stotram/saraswati-kavacham.html
+++ b/stotram/saraswati-kavacham.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>ಸರಸ್ವತೀ ಕವಚಂ (Saraswati Kavacham)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
