--- a/stotram/garuda-gamana-stotram.html
+++ b/stotram/garuda-gamana-stotram.html
@@ -5,56 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ಗರುಡಗಮನ ಸ್ತೋತ್ರಂ (Garudu Gamana Stotram)</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400..800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: "Baloo Tamma 2", system-ui;
-            font-weight: 400;
-            line-height: 1.6;
-            margin: 0 auto;
-            max-width: 800px;
-            padding: 20px;
-        }
-
-        .ENG {
-            font-style: italic;
-            color: #0066cc;
-            font-size: 0.9em;
-            display: none;
-            margin: 0;
-        }
-
-        .toggle-btn {
-            background-color: #0066cc;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-bottom: 20px;
-        }
-
-        .toggle-btn:hover {
-            background-color: #0052a3;
-        }
-
-        .video-container {
-            margin: 20px 0;
-        }
-
-        .video-container iframe {
-            max-width: 100%;
-            height: 315px;
-        }
-
-        @media (max-width: 600px) {
-            .video-container iframe {
-                height: 200px;
-            }
-        }
-    </style>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    
+    <!-- Centralized Styles -->
+    <link rel="stylesheet" href="../styles/common.css">
 </head>
 
 <body>
@@ -118,13 +72,7 @@
         </p>
     </div>
 
-    <script>
-        function toggleVisibility() {
-            const elements = document.querySelectorAll('.ENG');
-            elements.forEach(element => {
-                element.style.display = element.style.display === 'none' ? 'inline' : 'none';
-            });
-        }
-    </script>
+    <!-- Centralized Scripts -->
+    <script src="../scripts/common.js"></script>
 </body>
 </html>
