--- a/puja/TEMPLATE-PUJA.html
+++ b/puja/TEMPLATE-PUJA.html
@@ -1,36 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="kn">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEMPLATE_TITLE_LANG (TEMPLATE_TITLE_ENG)</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100..800&family=Baloo+Tamma+2:wght@400..800&family=Noto+Serif+Kannada&display=swap"
-        rel="stylesheet">
-    <style>
-        body {
-            /* font-family: "Noto Serif Kannada", system-ui; */
-            /* font-family: "Anek Kannada", system-ui; */
-            font-family: "Baloo Tamma 2", system-ui;
-            font-style: normal;
-            font-weight: 400;
-        }
-
-        .ENG {
-            font-style: italic;
-            color: blue;
-            font-size: x-small;
-            display: none;
-            margin-top: 0;
-            padding-top: 0;
-        }
-    </style>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    
+    <!-- Centralized Styles -->
+    <link rel="stylesheet" href="../styles/common.css">
 </head>
 
 <body>
     <h1>TEMPLATE_TITLE_LANG <span class="ENG">(TEMPLATE_TITLE_ENG)</span></h1>
 
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <div id="shuddikarana-mantra"></div>
     <div id="ganapati-prarthana"></div>
@@ -80,41 +63,9 @@
     </b>
     <div id="swasti"></div>
 
-    <script>
-        function loadSection(sectionId, url) {
-            fetch(url)
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById(sectionId).innerHTML = data;
-                })
-                .catch(error => console.error('Error fetching the section:', error));
-        }
-        loadSection('shuddikarana-mantra', '../general/shuddikarana-mantra.html');
-        loadSection('ganapati-prarthana', '../general/ganapati-prarthana.html');
-        loadSection('kuladevata-prarthana', '../general/kuladevata-prarthana.html');
-        loadSection('deepaaradhana', '../general/deepaaradhana.html');
-        loadSection('achamanam', '../general/achamanam.html');
-        loadSection('bhootoochchaatana', '../general/bhootoochchaatana.html');
-        loadSection('pranayama', '../general/pranayama.html');
-        loadSection('sankalpam', '../general/sankalpam.html');
-        loadSection('chaamaram', '../general/chaamaram.html');
-        loadSection('puja-end-prarthana', '../general/puja-end-prarthana.html');
-        loadSection('swasti', '../general/swasti.html');
-    </script>
+    <!-- Centralized Scripts -->
+    <script src="../scripts/common.js"></script>
 
 </body>
-
-<script>
-    function toggleVisibility() {
-        var elements = document.querySelectorAll('.ENG');
-        elements.forEach(function (element) {
-            if (element.style.display === 'none') {
-                element.style.display = 'inline';
-            } else {
-                element.style.display = 'none';
-            }
-        });
-    }
-</script>
 
 </html>
