Add CSS for all html

--- a/stotram/garuda-gamana-stotram.html
+++ b/stotram/garuda-gamana-stotram.html
@@ -26,42 +26,42 @@
     <div class="stotram-content">
         <p>
             ಗರುಡಗಮನ ತವ ಚರಣಕಮಲಮಿಹ, ಮನಸಿ ಲಸತು ಮಮ ನಿತ್ಯಂ <br>
-            <span class="ENG">garuḍa gamana tava caraṇa kamalam iha, manasila satu mama nityam</span><br>
+            <span class="ENG">garuḍa gamana tava caraṇa kamalam iha, manasila satu mama nityam<br></span>
             ಮಮ ತಾಪಮಪಾಕುರು ದೇವ, ಮಮ ಪಾಪಮಪಾಕುರು ದೇವ | ಧ್ರು. |<br>
             <span class="ENG">mama tāpam apākuru deva, mama pāpam apākuru deva | dhru. |</span>
         </p>
 
         <p>
             ಜಲಜನಯನ ವಿಧಿನಮುಚಿಹರಣಮುಖ, ವಿಬುಧವಿನುತ-ಪದಪದ್ಮ <br>
-            <span class="ENG">jalaja nayana vidhi namuci harana mukha, vibudha vinuta pada padma</span><br>
+            <span class="ENG">jalaja nayana vidhi namuci harana mukha, vibudha vinuta pada padma<br></span>
             ಮಮ ತಾಪಮಪಾಕುರು ದೇವ, ಮಮ ಪಾಪಮಪಾಕುರು ದೇವ | 1 |<br>
             <span class="ENG">mama tāpam apākuru deva, mama pāpam apākuru deva | 1 |</span>
         </p>
 
         <p>
             ಭುಜಗಶಯನ ಭವ ಮದನಜನಕ ಮಮ, ಜನನಮರಣ-ಭಯಹಾರಿ <br>
-            <span class="ENG">bhujaga śayana bhava madana janaka mama, janana maraṇa bhaya hāri</span><br>
+            <span class="ENG">bhujaga śayana bhava madana janaka mama, janana maraṇa bhaya hāri<br></span>
             ಮಮ ತಾಪಮಪಾಕುರು ದೇವ, ಮಮ ಪಾಪಮಪಾಕುರು ದೇವ | 2 |<br>
             <span class="ENG">mama tāpam apākuru deva, mama pāpam apākuru deva | 2 |</span>
         </p>
 
         <p>
             ಶಂಖಚಕ್ರಧರ ದುಷ್ಟದೈತ್ಯಹರ, ಸರ್ವಲೋಕ-ಶರಣ <br>
-            <span class="ENG">śaṅkha cakra dhara duṣṭa daitya hara, sarva loka śaraṇa</span><br>
+            <span class="ENG">śaṅkha cakra dhara duṣṭa daitya hara, sarva loka śaraṇa<br></span>
             ಮಮ ತಾಪಮಪಾಕುರು ದೇವ, ಮಮ ಪಾಪಮಪಾಕುರು ದೇವ | 3 |<br>
             <span class="ENG">mama tāpam apākuru deva, mama pāpam apākuru deva | 3 |</span>
         </p>
 
         <p>
             ಅಗಣಿತ-ಗುಣಗಣ ಅಶರಣಶರಣದ, ವಿದಲಿತ-ಸುರರಿಪುಜಾಲ <br>
-            <span class="ENG">agaṇita guṇa gaṇa aśaraṇa śaraṇada, vidalita sura ripu jāla</span><br>
+            <span class="ENG">agaṇita guṇa gaṇa aśaraṇa śaraṇada, vidalita sura ripu jāla<br></span>
             ಮಮ ತಾಪಮಪಾಕುರು ದೇವ, ಮಮ ಪಾಪಮಪಾಕುರು ದೇವ | 4 |<br>
             <span class="ENG">mama tāpam apākuru deva, mama pāpam apākuru deva | 4 |</span>
         </p>
 
         <p>
             ಭಕ್ತವರ್ಯಮಿಹ ಭೂರಿಕರುಣಯಾ, ಪಾಹಿ ಭಾರತೀತೀರ್ಥಮ್ <br>
-            <span class="ENG">bhakta varyam iha bhūri karuṇayā, pāhi bhāratī tīrtham</span><br>
+            <span class="ENG">bhakta varyam iha bhūri karuṇayā, pāhi bhāratī tīrtham<br></span>
             ಮಮ ತಾಪಮಪಾಕುರು ದೇವ, ಮಮ ಪಾಪಮಪಾಕುರು ದೇವ | 5 |<br>
             <span class="ENG">mama tāpam apākuru deva, mama pāpam apākuru deva | 5 |</span>
         </p>
