--- a/puja/lakshmi-chaturvimsati.html
+++ b/puja/lakshmi-chaturvimsati.html
@@ -1,80 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="kn">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ಮಹಾಲಕ್ಷ್ಮೀ ಚತುರ್ವಿಂಶತಿ (Mahalakshmi Chaturvimsati)</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100..800&family=Baloo+Tamma+2:wght@400..800&family=Noto+Serif+Kannada&display=swap"
-        rel="stylesheet">
-    <style>
-        body {
-            /* font-family: "Noto Serif Kannada", system-ui; */
-            /* font-family: "Anek Kannada", system-ui; */
-            font-family: "Baloo Tamma 2", system-ui;
-            font-style: normal;
-            font-weight: 400;
-        }
-
-        .ENG {
-            font-style: italic;
-            color: blue;
-            font-size: x-small;
-            display: none;
-            margin-top: 0;
-            padding-top: 0;
-        }
-    </style>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    
+    <!-- Centralized Styles -->
+    <link rel="stylesheet" href="../styles/common.css">
 </head>
 
 <body>
     <h1>ಮಹಾಲಕ್ಷ್ಮೀ ಚತುರ್ವಿಂಶತಿ <span class="ENG">(Mahalakshmi Chaturvimsati)</span></h1>
 
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <div id="lakshmi-chaturvimsati-stotram"></div>
     <div id="lakshmi-chaturvimsati-naamavali"></div>
 
+    <!-- Centralized Scripts -->
+    <script src="../scripts/common.js"></script>
     <script>
-        function loadSection(sectionId, url) {
-            fetch(url)
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById(sectionId).innerHTML = data;
-                })
-                .catch(error => console.error('Error fetching the section:', error));
-        }
-        loadSection('lakshmi-chaturvimsati-stotram', '../stotram/lakshmi-chaturvimsati-stotram.html');
-        loadSection('lakshmi-chaturvimsati-naamavali', '../stotram/lakshmi-chaturvimsati-naamavali.html');
-    </script>
-
-<h2>Literature</h2>
-
-<h3>Vakshastala Lakshmi Stotram</h3>
-    
-Every morning after the usual Thomala Seva and Koluvu, Kesavadi Chaturvimsati (24) Namavali followed by Sri
-Venkateswara Sahasranama Archana is recited, while tulasi leaves are being offered by the Vaikhanasa Archaka, at the
-lotus feet of Lord Venkateswara as part of Nitya Tiruvaradhanam. Immediately after the recital of Sri Venkateswara
-Sahasranama Archana (1008 holy names), the Vakshastala Lakshmi is offered with Chaturvimsati Namavali from Varaha
-Puranam, while the sacred Tulasi leaves from the lotus feet of Srivaru is being offered to Goddess Lakshmi and
-Goddess Padmavathi, present at the Chest of Srivaru. This stotram is considered very sacred as it is meant for Vyuha
-Lakshmi present on the Chest of Lord Venkateswara and it will give lot of wealth and prosperity to the devotees who
-recite. After every Archana (during I Archana, II Archana and Night Archana) this stotram is offered to Goddess
-Lakshmi.
-
-</body>
-
-<script>
-    function toggleVisibility() {
-        var elements = document.querySelectorAll('.ENG');
-        elements.forEach(function (element) {
-            if (element.style.display === 'none') {
-                element.style.display = 'inline';
-            } else {
-                element.style.display = 'none';
-            }
+        // Load the lakshmi chaturvimsati content sections
+        document.addEventListener('DOMContentLoaded', function() {
+            loadSection('lakshmi-chaturvimsati-stotram', '../stotram/lakshmi-chaturvimsati-stotram.html');
+            loadSection('lakshmi-chaturvimsati-naamavali', '../stotram/lakshmi-chaturvimsati-naamavali.html');
         });
-    }
-</script>
-
+    </script>
+</body>
 </html>
