--- a/stotram/dattratreya-mantra.html
+++ b/stotram/dattratreya-mantra.html
@@ -1,36 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="kn">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ದತ್ತಾತ್ರೇಯ ಚಿತ್ತ ಸ್ಥಿರ ಮಂತ್ರ (Dattātrēya citta sthira mantra)</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100..800&family=Baloo+Tamma+2:wght@400..800&family=Noto+Serif+Kannada&display=swap"
-        rel="stylesheet">
-    <style>
-        body {
-            /* font-family: "Noto Serif Kannada", system-ui; */
-            /* font-family: "Anek Kannada", system-ui; */
-            font-family: "Baloo Tamma 2", system-ui;
-            font-style: normal;
-            font-weight: 400;
-        }
-
-        .ENG {
-            font-style: italic;
-            color: blue;
-            font-size: x-small;
-            display: none;
-            margin-top: 0;
-            padding-top: 0;
-        }
-    </style>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    
+    <!-- Centralized Styles -->
+    <link rel="stylesheet" href="../styles/common.css">
 </head>
 
 <body>
     <h1>ದತ್ತಾತ್ರೇಯ ಚಿತ್ತ ಸ್ಥಿರ ಮಂತ್ರ <span class="ENG">(Dattātrēya citta sthira mantra)</span></h1>
 
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <p>
         ಅನಸೂಯಾತ್ರಿಸಂಭೂತ ದತ್ತಾತ್ರೇಯ ಮಹಾಮತೇ |<br>
@@ -94,17 +77,7 @@
 
 </body>
 
-<script>
-    function toggleVisibility() {
-        var elements = document.querySelectorAll('.ENG');
-        elements.forEach(function (element) {
-            if (element.style.display === 'none') {
-                element.style.display = 'inline';
-            } else {
-                element.style.display = 'none';
-            }
-        });
-    }
-</script>
+<!-- Centralized Scripts -->
+<script src="../scripts/common.js"></script>
 
 </html>
