--- a/stotram/lakshmi-ashtottara-satanaama-stotram.html
+++ b/stotram/lakshmi-ashtottara-satanaama-stotram.html
@@ -1,30 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="kn">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ಲಕ್ಷ್ಮಿ ಅಷ್ಟೋತ್ತರ ಶತನಾಮ ಸ್ತೋತ್ರಂ (Lakshmi Ashtottara Satanaama Stotram)</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100..800&family=Baloo+Tamma+2:wght@400..800&family=Noto+Serif+Kannada&display=swap"
-        rel="stylesheet">
-    <style>
-        body {
-            /* font-family: "Noto Serif Kannada", system-ui; */
-            /* font-family: "Anek Kannada", system-ui; */
-            font-family: "Baloo Tamma 2", system-ui;
-            font-style: normal;
-            font-weight: 400;
-        }
-
-        .ENG {
-            font-style: italic;
-            color: blue;
-            font-size: x-small;
-            display: none;
-            margin-top: 0;
-            padding-top: 0;
-        }
-    </style>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    
+    <!-- Centralized Styles -->
+    <link rel="stylesheet" href="../styles/common.css">
 </head>
 
 <body>
@@ -165,30 +149,7 @@
     </p>
     
 
-    <script>
-        function loadSection(sectionId, url) {
-            fetch(url)
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById(sectionId).innerHTML = data;
-                })
-                .catch(error => console.error('Error fetching the section:', error));
-        }
-    </script>
-
+    <!-- Centralized Scripts -->
+    <script src="../scripts/common.js"></script>
 </body>
-
-<script>
-    function toggleVisibility() {
-        var elements = document.querySelectorAll('.ENG');
-        elements.forEach(function (element) {
-            if (element.style.display === 'none') {
-                element.style.display = 'inline';
-            } else {
-                element.style.display = 'none';
-            }
-        });
-    }
-</script>
-
 </html>
