--- a/stotram/ramadootha-anjaneya-stotram.html
+++ b/stotram/ramadootha-anjaneya-stotram.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ರಾಮ ದೂತ ಆಂಜನೇಯ ಸ್ತೋತ್ರಂ (Rama Dootha Anjaneya Stotram)</title>
-    <link
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     
     <!-- Centralized Styles -->
@@ -12,9 +11,9 @@
 </head>
 
 <body>
-    <h2>ರಾಮ ದೂತ ಆಂಜನೇಯ ಸ್ತೋತ್ರಂ <span class="ENG">(Mahalakshmi Ashtakam)</span></h1>
+    <h1>ರಾಮ ದೂತ ಆಂಜನೇಯ ಸ್ತೋತ್ರಂ <span class="ENG">(Rama Dootha Anjaneya Stotram)</span></h1>
 
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <a href="https://youtu.be/FrUa0ovoZJQ?si=tqYMcE0c8rBKkBIX">Listen to Mahalakshmi Ashtakam</a>
     
