--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
             </div>
 
             <div class="tile">
+                <h2>Veerabhadra</h2>
+                <ol>
+                    <li> <a href="general/kuladevata-prarthana.html">Veerabhadra Prarthana</a> </li>
+                    <li> <a href="stotram/veerabhadra-kavacham.html">Veerabhadra Kavacham</a> </li>
+                </ol>
+            </div>
+
+            <div class="tile">
                 <h2>Uncategorised</h2>
                 <ol>
                     <li> <a href="stotram/daily-mantras.html">Daily Mantras</a> </li>
@@ -90,6 +98,7 @@
                     <li> <a href="puja/veerabhadra-puja.html">Veerabhadraswamy Puja (TBD)</a> </li>
                     <li> <a href="stotram/dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
                     <li> <a href="stotram/pitru-devata-stotram.html">Pitru Devata Stotram</a> </li>
+                    <li> <a href="stotram/dakshinamurthy-stotram.html">Dakshinamurthy Stotram</a> </li>
                 </ol>
             </div>
 
