--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
             <div class="tile">
                 <h2>Veerabhadra</h2>
                 <ol>
+                    <li> <a href="puja/veerabhadra-puja.html">Veerabhadraswamy Puja (In progress)</a> </li>
                     <li> <a href="general/kuladevata-prarthana.html">Veerabhadra Prarthana</a> </li>
-                    <li> <a href="stotram/veerabhadra-kavacham.html">Veerabhadra Kavacham</a> </li>
+                    <li> <a href="stotram/veerabhadra-kavacham.html">Veerabhadra Kavacham (In progress)</a> </li>
                 </ol>
             </div>
 
@@ -95,10 +96,9 @@
                 <ol>
                     <li> <a href="stotram/daily-mantras.html">Daily Mantras</a> </li>
                     <li> <a href="stotram/argala-stotram.html">Argalaa Stotram</a> </li>
-                    <li> <a href="puja/veerabhadra-puja.html">Veerabhadraswamy Puja (TBD)</a> </li>
                     <li> <a href="stotram/dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
                     <li> <a href="stotram/pitru-devata-stotram.html">Pitru Devata Stotram</a> </li>
-                    <li> <a href="stotram/dakshinamurthy-stotram.html">Dakshinamurthy Stotram</a> </li>
+                    <li> <a href="stotram/dakshinamurthy-stotram.html">Dakshinamurthy Stotram (In progress)</a> </li>
                 </ol>
             </div>
 
