--- a/stotram/daily-mantras.html
+++ b/stotram/daily-mantras.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="kn">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ನಿತ್ಯ ಮಂತ್ರ (Daily Mantra)</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
-    
+
     <!-- Centralized Styles -->
     <link rel="stylesheet" href="../styles/common.css">
 </head>
@@ -17,15 +18,27 @@
 
     <h2>ಪ್ರಭಾತ ಶ್ಲೋಕಃ <span class="ENG">(Prabhaata Sloka)</span></h2>
 
+    Today, let my actions bring prosperity (Lakshmi), wisdom (Saraswati), and be in line with dharma (Govinda). Before
+    looking at the world, look at yourself — your hands, your power to act. Realize that God acts through you. Use this
+    day well.
+
     <p>
         ಕರಾಗ್ರೇ ವಸತೇ ಲಕ್ಷ್ಮೀಃ <br>
-        <span class="ENG">karaagre vasate lakshmi <br></span>
+        <span class="ENG">kara agre vasate lakshmi <br>
+            Imagine golden light at your fingertips (Lakshmi: abundance) <br>
+        </span>
         ಕರಮಧ್ಯೇ ಸರಸ್ವತೀ | <br>
-        <span class="ENG">Kara madhye saraswati | <br></span>
+        <span class="ENG">Kara madhye saraswati | <br>
+            A serene white glow in your palm (Saraswati: knowledge, purity) <br>
+        </span>
         ಕರಮೂಲೇ ತು ಗೋವಿಂದಃ <br>
-        <span class="ENG">karamuuletu govinda <br></span>
+        <span class="ENG">kara muuletu govinda <br>
+            A deep blue, strong radiance at your wrist (Govinda: strength, sustenance) <br>
+        </span>
         ಪಪ್ರಭಾತೇ ಕರದರ್ಶನಮ್ || <br>
-        <span class="ENG">prabhaatae kara-darshanam || <br></span>
+        <span class="ENG">prabhaatae kara darshanam || <br>
+            Then fold your hands in Namaskara with devotion and humility. <br>
+        </span>
     </p>
 
     <h2>ಪ್ರಭಾತ ಭೂಮಿ ಶ್ಲೋಕಃ <span class="ENG">(Prabhaata Bhoomi Sloka)</span></h2>
