--- a/stotram/dakshinamurthy-stotram.html
+++ b/stotram/dakshinamurthy-stotram.html
@@ -18,7 +18,6 @@
 
     <p>
         TODO: compare with video (sanskrit channel) <br>
-        TODO: number of stotrams <br>
         TODO: non-IAST transliteration <br>
         TODO: meaning for dhyanashlokam <br>
         TODO: photo image described in dhyanashlokam <br>
@@ -26,133 +25,129 @@
 
     <div class="stotram-content">
 
+        <h2>|| ಶಾಂತಿಪಾಠಃ ||</h2>
         <p>
-            ದಕ್ಷಿಣಾಮೂರ್ತಿಸ್ತೋತ್ರಂ ಅಥವಾ ದಕ್ಷಿಣಾಮೂರ್ತ್ಯಷ್ಟಕಂ | <br>
             ಓಂ ಯೋ ಬ್ರಹ್ಮಾಣಂ ವಿದಧಾತಿ ಪೂರ್ವಂ | <br>
-            ಯೋ ವೈ ವೇದಾಂಶ್ಚ ಪ್ರಹಿಣೋತಿ ತಸ್ಮೈ | <br>
+            &emsp;ಯೋ ವೈ ವೇದಾಂಶ್ಚ ಪ್ರಹಿಣೋತಿ ತಸ್ಮೈ | <br>
             ತಂ ಹ ದೇವಮಾತ್ಮಬುದ್ಧಿಪ್ರಕಾಶಂ | <br>
-            ಮುಮುಕ್ಷುರ್ವೈ ಶರಣಮಹಂ ಪ್ರಪದ್ಯೇ .. | <br>
+            &emsp;ಮುಮುಕ್ಷುರ್ವೈ ಶರಣಮಹಂ ಪ್ರಪದ್ಯೇ .. | <br>
+            <br>
             ಓಂ ಶಾಂತಿಃ ಶಾಂತಿಃ ಶಾಂತಿಃ | <br>
-            <span class="ENG">
-            </span>
+            <span class="ENG"></span>
         </p>
 
-        <h2>ಧ್ಯಾನಶ್ಲೋಕಾಃ <span class="ENG">(Dhyanashlokam)</span></h2>
+        <h2>|| ಧ್ಯಾನಶ್ಲೋಕಾಃ ||<span class="ENG">(Dhyanashlokam)</span></h2>
         <p>
-            ಮೌನವ್ಯಾಖ್ಯಾ ಪ್ರಕಟಿತ ಪರಬ್ರಹ್ಮತತ್ತ್ವಂ ಯುವಾನಂ <br>
-            ವರ್ಷಿಷ್ಠಾಂತೇ ವಸದೃಷಿಗಣೈರಾವೃತಂ ಬ್ರಹ್ಮನಿಷ್ಠೈಃ | <br>
+            ಮೌನವ್ಯಾಖ್ಯಾ ಪ್ರಕಟಿತಪರಬ್ರಹ್ಮತತ್ತ್ವಂ ಯುವಾನಂ <br>
+            &emsp;ವರ್ಷಿಷ್ಠಾಂತೇ ವಸದೃಷಿಗಣೈರಾವೃತಂ ಬ್ರಹ್ಮನಿಷ್ಠೈಃ | <br>
             ಆಚಾರ್ಯೇಂದ್ರಂ ಕರಕಲಿತಚಿನ್ಮುದ್ರಮಾನಂದರೂಪಂ <br>
-            ಸ್ವಾತ್ಮಾರಾಮಂ ಮುದಿತವದನಂ ದಕ್ಷಿಣಾಮೂರ್ತಿಮೀಡೇ || 1 || <br>
-            <span class="ENG">
-            </span>
+            &emsp;ಸ್ವಾತ್ಮಾರಾಮಂ ಮುದಿತವದನಂ ದಕ್ಷಿಣಾಮೂರ್ತಿಮೀಡೇ || ೧ || <br>
+            <span class="ENG"></span>
         </p>
         <p>
             ವಟವಿಟಪಿಸಮೀಪೇ ಭೂಮಿಭಾಗೇ ನಿಷಣ್ಣಂ <br>
-            ಸಕಲಮುನಿಜನಾನಾಂ ಜ್ಞಾನದಾತಾರಮಾರಾತ್ | <br>
+            &emsp;ಸಕಲಮುನಿಜನಾನಾಂ ಜ್ಞಾನದಾತಾರಮಾರಾತ್ | <br>
             ತ್ರಿಭುವನಗುರುಮೀಶಂ ದಕ್ಷಿಣಾಮೂರ್ತಿದೇವಂ <br>
-            ಜನನಮರಣದುಃಖಚ್ಛೇದದಕ್ಷಂ ನಮಾಮಿ || 2 || <br>
-            <span class="ENG">
-            </span>
+            &emsp;ಜನನಮರಣದುಃಖಚ್ಛೇದದಕ್ಷಂ ನಮಾಮಿ || ೨ || <br>
+            <span class="ENG"></span>
         </p>
         <p>
             ಚಿತ್ರಂ ವಟತರೋರ್ಮೂಲೇ ವೃದ್ಧಾಃ ಶಿಷ್ಯಾ ಗುರುರ್ಯುವಾ | <br>
-            ಗುರೋಽಸ್ತು ಮೌನಂ ವ್ಯಾಖ್ಯಾನಂ ಶಿಷ್ಯಾಸ್ತು ಛಿನ್ನ ಸಂಶಯಾಃ || 3 || <br>
-            <span class="ENG">
-            </span>
+            &emsp;ಗುರೋಽಸ್ತು ಮೌನಂ ವ್ಯಾಖ್ಯಾನಂ ಶಿಷ್ಯಾಸ್ತು ಛಿನ್ನ ಸಂಶಯಾಃ || ೩ || <br>
+            <span class="ENG"></span>
         </p>
         <p>
             ನಿಧಯೇ ಸರ್ವವಿದ್ಯಾನಾಂ ಭಿಷಜೇ ಭವರೋಗಿಣಾಂ | <br>
-            ಗುರವೇ ಸರ್ವಲೋಕಾನಾಂ ದಕ್ಷಿಣಾಮೂರ್ತಯೇ ನಮಃ || 4 || <br>
-            <span class="ENG">
-            </span>
+            &emsp;ಗುರವೇ ಸರ್ವಲೋಕಾನಾಂ ದಕ್ಷಿಣಾಮೂರ್ತಯೇ ನಮಃ || ೪ || <br>
+            <span class="ENG"></span>
         </p>
         <p>
             ಓಂ ನಮಃ ಪ್ರಣವಾರ್ಥಾಯ ಶುದ್ಧಜ್ಞಾನೈಕಮೂರ್ತಯೇ | <br>
-            ನಿರ್ಮಲಾಯ ಪ್ರಶಾಂತಾಯ ದಕ್ಷಿಣಾಮೂರ್ತಯೇ ನಮಃ || 5 || <br>
-            <span class="ENG">
-            </span>
+            &emsp;ನಿರ್ಮಲಾಯ ಪ್ರಶಾಂತಾಯ ದಕ್ಷಿಣಾಮೂರ್ತಯೇ ನಮಃ || ೫ || <br>
+            <span class="ENG"></span>
         </p>
 
-        <h2>ಸ್ತೋತ್ರಂ <span class="ENG">(Stotram)</span></h2>
+        <h2>|| ಸ್ತೋತ್ರಂ || <span class="ENG">(Stotram)</span></h2>
         <p>
             ವಿಶ್ವಂ ದರ್ಪಣದೃಶ್ಯಮಾನನಗರೀತುಲ್ಯಂ ನಿಜಾಂತರ್ಗತಂ <br>
-            ಪಶ್ಯನ್ನಾತ್ಮನಿ ಮಾಯಯಾ ಬಹಿರಿವೋದ್ಭೂತಂ ಯಥಾ ನಿದ್ರಯಾ | <br>
+            &emsp;ಪಶ್ಯನ್ನಾತ್ಮನಿ ಮಾಯಯಾ ಬಹಿರಿವೋದ್ಭೂತಂ ಯಥಾ ನಿದ್ರಯಾ | <br>
             ಯಃ ಸಾಕ್ಷಾತ್ಕುರುತೇ ಪ್ರಬೋಧಸಮಯೇ ಸ್ವಾತ್ಮಾನಮೇವಾದ್ವಯಂ <br>
-            ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || 1 || <br>
+            &emsp;ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || ೧ || <br>
             <span class="ENG"></span>
         </p>
         <p>
             ಬೀಜಸ್ಯಾಂತರಿವಾಂಕುರೋ ಜಗದಿದಂ ಪ್ರಾಙ್ನಿರ್ವಿಕಲ್ಪಂ ಪುನಃ <br>
-            ಮಾಯಾಕಲ್ಪಿತದೇಶಕಾಲಕಲನಾವೈಚಿತ್ರ್ಯಚಿತ್ರೀಕೃತಂ | <br>
+            &emsp;ಮಾಯಾಕಲ್ಪಿತದೇಶಕಾಲಕಲನಾವೈಚಿತ್ರ್ಯಚಿತ್ರೀಕೃತಂ | <br>
             ಮಾಯಾವೀವ ವಿಜೃಂಭಯತ್ಯಪಿ ಮಹಾಯೋಗೀವ ಯಃ ಸ್ವೇಚ್ಛಯಾ <br>
-            ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || 2 || <br>
+            &emsp;ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || ೨ || <br>
             <span class="ENG"></span>
         </p>
         <p>
             ಯಸ್ಯೈವ ಸ್ಫುರಣಂ ಸದಾತ್ಮಕಮಸತ್ಕಲ್ಪಾರ್ಥಕಂ ಭಾಸತೇ (ಕಲ್ಪಾರ್ಥಗಂ) <br>
-            ಸಾಕ್ಷಾತ್ತತ್ತ್ವಮಸೀತಿ ವೇದವಚಸಾ ಯೋ ಬೋಧಯತ್ಯಾಶ್ರಿತಾನ್ | <br>
+            &emsp;ಸಾಕ್ಷಾತ್ತತ್ತ್ವಮಸೀತಿ ವೇದವಚಸಾ ಯೋ ಬೋಧಯತ್ಯಾಶ್ರಿತಾನ್ | <br>
             ಯತ್ಸಾಕ್ಷಾತ್ಕರಣಾದ್ಭವೇನ್ನ ಪುನರಾವೃತ್ತಿರ್ಭವಾಂಭೋನಿಧೌ <br>
-            ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || 3 || <br>
+            &emsp;ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || ೩ || <br>
             <span class="ENG"></span>
         </p>
         <p>
             ನಾನಾಚ್ಛಿದ್ರಘಟೋದರಸ್ಥಿತಮಹಾದೀಪಪ್ರಭಾಭಾಸ್ವರಂ <br>
-            ಜ್ಞಾನಂ ಯಸ್ಯ ತು ಚಕ್ಷುರಾದಿಕರಣದ್ವಾರಾ ಬಹಿಃ ಸ್ಪಂದತೇ | <br>
+            &emsp;ಜ್ಞಾನಂ ಯಸ್ಯ ತು ಚಕ್ಷುರಾದಿಕರಣದ್ವಾರಾ ಬಹಿಃ ಸ್ಪಂದತೇ | <br>
             ಜಾನಾಮೀತಿ ತಮೇವ ಭಾಂತಮನುಭಾತ್ಯೇತತ್ಸಮಸ್ತಂ ಜಗತ್ <br>
-            ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || 4 || <br>
+            &emsp;ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || ೪ || <br>
             <span class="ENG"></span>
         </p>
         <p>
             ದೇಹಂ ಪ್ರಾಣಮಪೀಂದ್ರಿಯಾಣ್ಯಪಿ ಚಲಾಂ ಬುದ್ಧಿಂ ಚ ಶೂನ್ಯಂ ವಿದುಃ <br>
-            ಸ್ತ್ರೀಬಾಲಾಂಧಜಡೋಪಮಾಸ್ತ್ವಹಮಿತಿ ಭ್ರಾಂತಾ ಭೃಶಂ ವಾದಿನಃ | <br>
+            &emsp;ಸ್ತ್ರೀಬಾಲಾಂಧಜಡೋಪಮಾಸ್ತ್ವಹಮಿತಿ ಭ್ರಾಂತಾ ಭೃಶಂ ವಾದಿನಃ | <br>
             ಮಾಯಾಶಕ್ತಿವಿಲಾಸಕಲ್ಪಿತಮಹಾ ವ್ಯಾಮೋಹಸಂಹಾರಿಣೇ <br>
-            ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || 5 || <br>
+            &emsp;ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || ೫ || <br>
             <span class="ENG"></span>
         </p>
         <p>
             ರಾಹುಗ್ರಸ್ತದಿವಾಕರೇಂದುಸದೃಶೋ ಮಾಯಾಸಮಾಚ್ಛಾದನಾತ್ <br>
-            ಸನ್ಮಾತ್ರಃ ಕರಣೋಪಸಂಹರಣತೋ ಯೋಽಭೂತ್ಸುಷುಪ್ತಃ ಪುಮಾನ್ | <br>
+            &emsp;ಸನ್ಮಾತ್ರಃ ಕರಣೋಪಸಂಹರಣತೋ ಯೋಽಭೂತ್ಸುಷುಪ್ತಃ ಪುಮಾನ್ | <br>
             ಪ್ರಾಗಸ್ವಾಪ್ಸಮಿತಿ ಪ್ರಬೋಧಸಮಯೇ ಯಃ ಪ್ರತ್ಯಭಿಜ್ಞಾಯತೇ <br>
-            ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || 6 || <br>
+            &emsp;ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || ೬ || <br>
             <span class="ENG"></span>
         </p>
         <p>
             ಬಾಲ್ಯಾದಿಷ್ವಪಿ ಜಾಗ್ರದಾದಿಷು ತಥಾ ಸರ್ವಾಸ್ವವಸ್ಥಾಸ್ವಪಿ <br>
-            ವ್ಯಾವೃತ್ತಾಸ್ವನುವರ್ತಮಾನಮಹಮಿತ್ಯಂತಃ ಸ್ಫುರಂತಂ ಸದಾ | <br>
+            &emsp;ವ್ಯಾವೃತ್ತಾಸ್ವನುವರ್ತಮಾನಮಹಮಿತ್ಯಂತಃ ಸ್ಫುರಂತಂ ಸದಾ | <br>
             ಸ್ವಾತ್ಮಾನಂ ಪ್ರಕಟೀಕರೋತಿ ಭಜತಾಂ ಯೋ ಮುದ್ರಯಾ ಭದ್ರಯಾ <br>
-            ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || 7 || <br>
+            &emsp;ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || ೭ || <br>
             <span class="ENG"></span>
         </p>
         <p>
             ವಿಶ್ವಂ ಪಶ್ಯತಿ ಕಾರ್ಯಕಾರಣತಯಾ ಸ್ವಸ್ವಾಮಿಸಂಬಂಧತಃ <br>
-            ಶಿಷ್ಯಾಚಾರ್ಯತಯಾ ತಥೈವ ಪಿತೃಪುತ್ರಾದ್ಯಾತ್ಮನಾ ಭೇದತಃ | <br>
+            &emsp;ಶಿಷ್ಯಾಚಾರ್ಯತಯಾ ತಥೈವ ಪಿತೃಪುತ್ರಾದ್ಯಾತ್ಮನಾ ಭೇದತಃ | <br>
             ಸ್ವಪ್ನೇ ಜಾಗ್ರತಿ ವಾ ಯ ಏಷ ಪುರುಷೋ ಮಾಯಾಪರಿಭ್ರಾಮಿತಃ <br>
-            ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || 8 || <br>
+            &emsp;ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || ೮ || <br>
             <span class="ENG"></span>
         </p>
         <p>
             ಭೂರಂಭಾಂಸ್ಯನಲೋಽನಿಲೋಽಮ್ಬರಮಹರ್ನಾಥೋ ಹಿಮಾಂಶುಃ ಪುಮಾನ್ <br>
-            ಇತ್ಯಾಭಾತಿ ಚರಾಚರಾತ್ಮಕಮಿದಂ ಯಸ್ಯೈವ ಮೂರ್ತ್ಯಷ್ಟಕಂ | <br>
+            &emsp;ಇತ್ಯಾಭಾತಿ ಚರಾಚರಾತ್ಮಕಮಿದಂ ಯಸ್ಯೈವ ಮೂರ್ತ್ಯಷ್ಟಕಂ | <br>
             ನಾನ್ಯತ್ಕಿಂಚನ ವಿದ್ಯತೇ ವಿಮೃಶತಾಂ ಯಸ್ಮಾತ್ಪರಸ್ಮಾದ್ವಿಭೋಃ <br>
-            ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || 9 || <br>
+            &emsp;ತಸ್ಮೈ ಶ್ರೀಗುರುಮೂರ್ತಯೇ ನಮ ಇದಂ ಶ್ರೀದಕ್ಷಿಣಾಮೂರ್ತಯೇ || ೯ || <br>
             <span class="ENG"></span>
         </p>
         <p>
             ಸರ್ವಾತ್ಮತ್ವಮಿತಿ ಸ್ಫುಟೀಕೃತಮಿದಂ ಯಸ್ಮಾದಮುಷ್ಮಿನ್ ಸ್ತವೇ <br>
-            ತೇನಾಸ್ಯ ಶ್ರವಣಾತ್ತದರ್ಥಮನನಾದ್ಧ್ಯಾನಾಚ್ಚ ಸಂಕೀರ್ತನಾತ್ | <br>
+            &emsp;ತೇನಾಸ್ಯ ಶ್ರವಣಾತ್ತದರ್ಥಮನನಾದ್ಧ್ಯಾನಾಚ್ಚ ಸಂಕೀರ್ತನಾತ್ | <br>
             ಸರ್ವಾತ್ಮತ್ವಮಹಾವಿಭೂತಿಸಹಿತಂ ಸ್ಯಾದೀಶ್ವರತ್ವಂ ಸ್ವತಃ var ತತಃ <br>
-            ಸಿದ್ಧ್ಯೇತ್ತತ್ಪುನರಷ್ಟಧಾ ಪರಿಣತಂ ಚೈಶ್ವರ್ಯಮವ್ಯಾಹತಂ || 10 || <br>
+            &emsp;ಸಿದ್ಧ್ಯೇತ್ತತ್ಪುನರಷ್ಟಧಾ ಪರಿಣತಂ ಚೈಶ್ವರ್ಯಮವ್ಯಾಹತಂ || ೧೦ || <br>
             <span class="ENG"></span>
         </p>
         <p>
             ವಟವಿಟಪಿಸಮೀಪೇ ಭೂಮಿಭಾಗೇ ನಿಷಣ್ಣಂ <br>
-            ಸಕಲಮುನಿಜನಾನಾಂ ಜ್ಞಾನದಾತಾರಮಾರಾತ್ | <br>
+            &emsp;ಸಕಲಮುನಿಜನಾನಾಂ ಜ್ಞಾನದಾತಾರಮಾರಾತ್ | <br>
             ತ್ರಿಭುವನಗುರುಮೀಶಂ ದಕ್ಷಿಣಾಮೂರ್ತಿದೇವಂ <br>
-            ಜನನಮರಣದುಃಖಚ್ಛೇದದಕ್ಷಂ ನಮಾಮಿ ||<br>
+            &emsp;ಜನನಮರಣದುಃಖಚ್ಛೇದದಕ್ಷಂ ನಮಾಮಿ ||<br>
+            <span class="ENG"></span>
         </p>
         <p>
             ಇತಿ ಶ್ರೀಮತ್ಪರಮಹಂಸಪರಿವ್ರಾಜಕಾಚಾರ್ಯಸ್ಯ ಶ್ರೀಗೋವಿಂದಭಗವತ್ಪೂಜ್ಯಪಾದಶಿಷ್ಯಸ್ಯ <br>
-            ಶ್ರೀಮಚ್ಛಂಕರಭಗವತಃ ಕೃತೌ ದಕ್ಷಿಣಾಮೂರ್ತ್ಯಷ್ಟಕಂ ಸಂಪೂರ್ಣಂ ||
+            ಶ್ರೀಮಚ್ಛಂಕರಭಗವತಃ ಕೃತೌ ದಕ್ಷಿಣಾಮೂರ್ತ್ಯಷ್ಟಕಂ ಸಂಪೂರ್ಣಂ |
             <span class="ENG"></span>
         </p>
 
@@ -165,6 +160,11 @@
             <li>
                 <a href="https://youtu.be/IIVKhZrFLDQ?si=YUhj5Sr-qa3wccFT" target="_blank" rel="noopener">
                     Dakshinamurthy Stotram (Sanskrit Channel) - Challakere Brothers
+                </a>
+            </li>
+            <li>
+                <a href="https://sanskritdocuments.org/doc_shiva/dakshina.html" target="_blank" rel="noopener">
+                    Dakshinamurthy Stotram (Sanskrit Documents)
                 </a>
             </li>
         </ul>
