--- a/stotram/veerabhadra-kavacham.html
+++ b/stotram/veerabhadra-kavacham.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ಶ್ರೀವೀರಭದ್ರಕವಚಂ (Veerabhadra Kavacham)</title>
+    <title>ಶ್ರೀ ವೀರಭದ್ರ ಕವಚಂ (Sri Veerabhadra Kavacham)</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
 
     <!-- Centralized Styles -->
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>ಶ್ರೀವೀರಭದ್ರಕವಚಂ <span class="ENG">(Veerabhadra Kavacham)</span></h1>
+    <h1>ಶ್ರೀ ವೀರಭದ್ರ ಕವಚಂ <span class="ENG">(Sri Veerabhadra Kavacham)</span></h1>
 
     <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
